--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -87,9 +87,11 @@ The prompt is the most important field - it defines your agent's personality, kn
 Switch to the **Voice** tab to customize how your agent sounds:
 
 1. **Voice**: Select a voice that matches your brand (click play to preview)
-2. **Voice Temperature**: `0.8` (default balance between consistency and expressiveness)
-3. **Voice Speed**: `1.0` (normal speaking rate)
-4. Click **Save Voice Settings**
+2. Click **Save Voice**
+
+<Tip>
+Browse all 300+ available voices in the [Voice Library](https://dashboard.revring.ai/app/agents/voices). You can filter by language and preview each voice before selecting.
+</Tip>
 
 ## Step 3: Test Your Agent
 
@@ -158,7 +160,7 @@ Now that you have a working agent, explore more advanced features:
     - Review and refine your prompt for clearer instructions
     - Check the transcript for specific errors
     - Ensure your prompt isn't too long or complex
-    - Try adjusting voice temperature for more natural responses
+    - Try different voices to find the best fit for your use case
   </Accordion>
   
   <Accordion title="Can't find my phone numbers">
