--- a/platform/multilingual.mdx
+++ b/platform/multilingual.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Multilingual'
 description: 'Build AI voice agents that speak multiple languages'
-icon: 'globe'
+icon: 'languages'
 ---
 
 RevRing supports AI voice agents in 20+ languages, enabling you to serve customers globally with natural-sounding voices in their native language.
