--- a/platform/webrtc.mdx
+++ b/platform/webrtc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'WebRTC'
 description: 'Add voice AI agents to web browsers and mobile apps'
-icon: 'browser'
+icon: 'globe'
 ---
 
 Enable voice calling directly from web browsers, iOS apps, and Android apps using the RevRing WebRTC SDK. End users can talk to your AI agents without leaving your website or application.
