--- a/platform/webrtc.mdx
+++ b/platform/webrtc.mdx
@@ -6,7 +6,7 @@ icon: 'globe'
 
 Enable voice calling directly from web browsers, iOS apps, and Android apps using the RevRing WebRTC SDK. End users can talk to your AI agents without leaving your website or application.
 
-## How WebRTC Works
+## How RevRing WebRTC Works
 
 WebRTC enables real-time voice communication in browsers and mobile apps:
 
@@ -44,19 +44,18 @@ RevRing does not charge any additional fees for WebRTC. You only pay Twilio voic
 
 ### Step 1: Connect Your Twilio Account
 
-1. Navigate to [WebRTC](https://dashboard.revring.ai/app/webrtc) in your RevRing dashboard
-2. Click **Set Up WebRTC**
-3. You'll need two values from your Twilio Console:
+1. Navigate to [Developer → WebRTC](https://dashboard.revring.ai/app/webrtc) in your RevRing dashboard
+2. You'll need two values from your Twilio Console:
 
 #### Get Your Twilio Account SID
 
 1. Log into [Twilio Console](https://console.twilio.com)
-2. From the dashboard homepage, copy your **Account SID**
+2. From the console homepage, copy your **Account SID**
 3. Paste it into the **Twilio Account SID** field in RevRing
 
 #### Get Your Twilio Auth Token
 
-1. In the Twilio Console dashboard, click **Show** next to Auth Token
+1. In the Twilio Console, click **Show** next to Auth Token
 2. Copy the **Auth Token**
 3. Paste it into the **Twilio Auth Token** field in RevRing
 
@@ -64,7 +63,7 @@ RevRing does not charge any additional fees for WebRTC. You only pay Twilio voic
 Your Auth Token is used only during initial setup to create voice credentials and configure your Twilio account. It is not stored by RevRing.
 </Warning>
 
-4. Click **Set Up WebRTC**
+3. Click **Set Up WebRTC** to submit the form
 
 RevRing will automatically create and configure the necessary Twilio resources (credentials for voice calls and TwiML application) for WebRTC calling.
 
@@ -310,7 +309,7 @@ WebRTC support extends beyond the browser. Build native mobile experiences with 
 - **Android SDK**: Native Kotlin/Java implementation for Android devices  
 - **React Native SDK**: Cross-platform support for React Native apps
 
-Contact [support](mailto:contact@revring.ai) for access to mobile SDKs and documentation.
+Contact support for help with mobile SDKs and documentation.
 
 ## Best Practices
 
